# Jaculus

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml
.github/actions/setup-esp-idf/: action.yml  install.sh
.github/workflows/: basic.yml
development/building-runtime/: index.html
development/uploading-js-code/: index.html
docs/: index.md
docs/development/: building-runtime.md  uploading-js-code.md
firmware/: sdkconfig
firmware/main/: credentials.hpp  credentials_template.hpp  main.cpp  wifi.h
runtime/: CMakeLists.txt  partitions.csv  sdkconfig
runtime/components/jacMachine/: CMakeLists.txt  duktape.yml
runtime/components/jacMachine/assets/: regeneratorRuntime.js  rtosTimerWrappers.js
runtime/components/jacMachine/include/: dukUtility.hpp  jsmachine.hpp
runtime/components/jacMachine/include/features/: cMemoryAllocator.hpp  nodeModules.hpp  promise.hpp  rtosTimers.hpp  socketDebugger.hpp
runtime/components/jacMachine/releng/: Duktape.cmake
runtime/main/: CMakeLists.txt  main.cpp  wifi.h
search/: search_index.json
tests/host/: CMakeLists.txt  README.md
tests/javascript/: README.md
tools/: cobs.js  frameparser.js  muxclient.js  transfer.py
tools/jac/: index.ts  package-lock.json  package.json  tsconfig-base.json  tsconfig.json
tools/jac/commands/: hello.ts  (+6 more)
tools/mux-link/: ChannelDemuxer.ts  ChannelIdEnhancer.ts  ChannelMuxer.ts  FrameEncoder.ts  FrameParser.ts  cobs.ts  crc.js  frameparser.js  frameparser.ts  index.ts  package-lock.json  package.json  tsconfig.json
(+66 files in other folders)
